# rsomics-quantile-transform

./: .gitignore  Cargo.toml  PERF_NOTES.md  README.md
.github/workflows/: ci.yml
benches/: quantile_transform.rs
src/: cli.rs  io.rs  lib.rs  ndtri.rs  quantile.rs  rng.rs  transform.rs
tests/: compat.rs
tests/golden/: basic_10x3.tsv  basic_10x3_normal_q10.tsv  basic_10x3_uniform_q1000_clamped.hex  big_20x2.tsv  big_20x2_uniform_q5_sub10.hex  constant_col.tsv  constant_col_uniform_q5.hex  degenerate_3x2.tsv  degenerate_3x2_normal_q1.tsv  degenerate_3x2_uniform_q1.hex  large_2000x4.tsv  large_2000x4_uniform_q1000.hex  negative.tsv  negative_uniform_q5.hex  ties.tsv  ties_normal_q5.tsv  ties_uniform_q5.hex
