[package]
name = "rsomics-quantile-transform"
version = "0.1.1"
description = "Quantile transformer — value-exact scikit-learn QuantileTransformer port mapping features to uniform or normal distributions"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-quantile-transform"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["quantile", "normalization", "preprocessing", "genomics", "scikit-learn"]
readme = "README.md"

[[bin]]
name = "rsomics-quantile-transform"
path = "src/main.rs"

[lib]
name = "rsomics_quantile_transform"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6", features = ["rayon"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
fast-float2 = "0.2"

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
serde_json = "1"
tempfile = "3"

[[bench]]
name = "quantile_transform"
harness = false
